# krita-vc

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DESIGN.md  LICENSE  README.md  RELEASE_NOTES.md  SITE_CONTENT.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README.md  SITE_CONTENT.md  frontend-architecture.md  mock-data.md  performance-report.md  performance.md  version-control.md  visual-diff-viewer.md
krita-plugin/: README.md  kritavc.desktop  test_kvc_client.py
krita-plugin/kritavc/: __init__.py  kvc_client.py  vc_docker.py
scripts/: screenshots.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: branch.rs  commands.rs  commit.rs  delta.rs  error.rs  gc.rs  kra.rs  lib.rs  main.rs  merge.rs  palette.rs  raster.rs  repo.rs  scan.rs  stash.rs  tiles.rs
src-tauri/tests/: bench.rs  engine.rs  kvc_cli.rs
src/components/: MainPanel.tsx
src/components/shell/: ActivityBar.tsx  AppShell.tsx  BusyOverlay.tsx  DockerPanel.tsx  Inspector.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  TourOverlay.tsx
src/components/ui/: Button.tsx  IconButton.tsx  Menu.tsx  Modal.tsx
src/components/vcs/: ArtCanvas.tsx  ArtDiffView.tsx  BranchBadge.tsx  BranchDialogs.tsx  BranchesPanel.tsx  ChangesPanel.tsx  CommitCard.tsx  CommitGraph.tsx  CommitGraphRail.tsx  CompareSlider.tsx  DiffView.tsx  FileStatusChip.tsx  LayerStackPanel.tsx  PaletteDiffView.tsx  PerformancePanel.tsx  StashDialogs.tsx
src/data/: mockArt.ts  mockData.ts  mockPalette.ts
src/lib/: artistMode.tsx  authorName.tsx  format.ts  friendly.ts  graph.ts  perf.ts  repoData.ts  repository.tsx  svgArt.ts  tauri.ts  theme.tsx  toast.tsx  tour.tsx  useResize.ts  useZoomPan.ts  windowChrome.tsx
src/styles/: global.css
