[package]
name = "krita-vc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krita_vc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Dev builds run the same image/compression hot loops as release — unoptimized they are
# 10-50x slower and make `tauri dev` feel broken. Deps at full opt, our crate at 1.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
qbsdiff = "1"
blake3 = { version = "1", features = ["rayon"] }
roxmltree = "0.20"
walkdir = "2"
rayon = "1"
zstd = "0.13"
thiserror = "2"
png = "0.17"

[dev-dependencies]
tempfile = "3"
zip = "2"

