[package]
name = "krita-vc"
version = "0.2.0"
description = "Krita Version Control"
authors = ["Zeru Sakamoto"]
edition = "2021"
# Two [[bin]] targets now exist (the Tauri app + the headless `kvc` CLI); tell bare
# `cargo run` (what Tauri's dev/build commands invoke) which one to launch.
default-run = "krita-vc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "krita_vc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless companion CLI over the same engine, for out-of-process callers (the Krita
# plugin) that don't want the Tauri runtime — see src/bin/kvc.rs.
[[bin]]
name = "kvc"
path = "src/bin/kvc.rs"

# Dev builds run the same image/compression hot loops as release — unoptimized they are
# 10-50x slower and make `tauri dev` feel broken. Deps at full opt, our crate at 1.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
# Single codegen unit: a few % across the image/compression hot loops for slower (rare) release links.
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
qbsdiff = "1"
blake3 = { version = "1", features = ["rayon"] }
roxmltree = "0.20"
walkdir = "2"
rayon = "1"
zstd = "0.13"
thiserror = "2"
png = "0.17"
bincode = "1"

[dev-dependencies]
tempfile = "3"
zip = "2"
serde_json = "1"
# For fabricating legacy monolithic chains files in migration tests.
bincode = "1"
zstd = "0.13"

